--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <div class="navbar container">
                 <div class="nav_left">
-                    <img src="img/SiteLogo3.svg" alt="Logo">
+                    <a href="#"><img src="img/SiteLogo3.svg" alt="Logo"></a>
                     <ul>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Features</a></li>
